# pkg_auth

./: .gitignore  CHANGELOG.md  KEYCLOAK_ADMIN.md  README.md  pyproject.toml
.github/workflows/: auto-release-pkg-auth.yml  ci.yml  publish.yml  release-pkg-auth.yml  sync-wiki.yaml
docs/: Authorization.md  Caching.md  Django-Integration.md  Django.md  FastAPI-Integration.md  FastAPI.md  Home.md  Installation.md  Keycloak-Admin.md  MIGRATION_v1.md  MIGRATION_v2.md  MIGRATION_v3.md  NATS-Catalog-Sync.md  Strawberry-GraphQL-Integration.md  Strawberry.md  Upgrade-Service-Guard.md  User-Guide.md  _Sidebar.md
examples/itqadem_courses_app/: README.md  pyproject.toml
examples/itqadem_courses_app/courses_app/: __init__.py  deps.py  main.py  permissions.py  seed.py
src/pkg_auth/: __init__.py
src/pkg_auth/adapters/keycloak/: jwt_decoder.py
src/pkg_auth/admin/: __init__.py  cli.py  client.py  env.py  helpers.py  provision_client.py  settings.py
src/pkg_auth/application/use_cases/: __init__.py  authenticate.py  authorize.py
src/pkg_auth/authentication/: __init__.py
src/pkg_auth/authentication/adapters/keycloak/: __init__.py  jwt_decoder.py
src/pkg_auth/authentication/application/: __init__.py
src/pkg_auth/authentication/application/use_cases/: authenticate.py
src/pkg_auth/authentication/domain/: __init__.py  entities.py  exceptions.py  ports.py  value_objects.py
src/pkg_auth/authorization/: __init__.py  config.py  platform.py
src/pkg_auth/authorization/adapters/: __init__.py
src/pkg_auth/authorization/adapters/cache/: __init__.py  decorators.py  memory.py  protocol.py  redis.py
src/pkg_auth/authorization/adapters/django_orm/: __init__.py  apps.py  mixins.py  models.py
src/pkg_auth/authorization/adapters/django_orm/repositories/: __init__.py  membership.py  organization.py  organization_service.py  permission_catalog.py  role.py  service.py  user.py
src/pkg_auth/authorization/adapters/nats/: __init__.py  publisher.py  subscriber.py  wire.py
src/pkg_auth/authorization/adapters/sqlalchemy/: __init__.py  base.py  mixins.py  models.py
src/pkg_auth/authorization/adapters/sqlalchemy/migrations/: __init__.py
src/pkg_auth/authorization/application/: __init__.py
src/pkg_auth/authorization/application/use_cases/: __init__.py  _helpers.py  check_permission.py  create_organization.py  create_role.py  delete_membership.py  delete_organization.py  delete_role.py  list_user_organizations.py  provision_default_services.py  register_permission_catalog.py  resolve_auth_context.py  resolve_user_from_jwt.py  set_organization_service.py  sync_permission_catalog.py  sync_service_catalog.py  sync_user_from_jwt.py  update_organization.py  update_role.py  upsert_membership.py
src/pkg_auth/authorization/cli/: __init__.py  sync_catalog.py  sync_services.py
src/pkg_auth/authorization/domain/: __init__.py  entities.py  exceptions.py  ports.py  value_objects.py
src/pkg_auth/domain/: constants.py  entities.py  exceptions.py  ports.py  value_objects.py
src/pkg_auth/integrations/common/: __init__.py  auth_factory.py
src/pkg_auth/integrations/django/: __init__.py  apps.py  auth.py  auth_context_middleware.py  decorators.py  install.py  middleware.py
src/pkg_auth/integrations/fastapi/: __init__.py  auth_context_dep.py  auth_factory.py  decorators.py  deps.py  errors.py  identity_dep.py  security.py
src/pkg_auth/integrations/strawberry/: __init__.py  auth.py  example.md  permissions.py
tests/: test_domain.py
tests/authorization/adapters/: test_services_integration.py
tests/authorization/adapters/nats/: test_end_to_end.py  test_publisher.py  test_subscriber.py  test_wire.py
tests/authorization/application/: fakes.py  test_check_permission.py  test_memberships.py  test_organizations.py  test_register_permission_catalog.py  test_resolve_auth_context.py  test_resolve_auth_context_guard.py  test_resolve_user_from_jwt.py  test_role_visibility.py  test_roles.py  test_services.py  test_sync_permission_catalog.py  test_sync_user_from_jwt.py
tests/authorization/cli/: test_sync_catalog.py  test_sync_services.py
tests/authorization/domain/: test_auth_context.py  test_exceptions.py  test_localized_text.py  test_permission_key_validation.py  test_platform_context.py  test_value_objects.py
(+16 files in other folders)
